--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 project(BPtree)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(BPtree bptree.h bptree.cpp debug.h CachedBPtree.h Cache.h public.h CachedBPtree.cpp main.cpp)
+aux_source_directory(src SOURCE)
+add_executable(BPtree ${SOURCE})
