--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-O2")
 
 aux_source_directory(src SOURCE)
-add_executable(BPtree ${SOURCE} src/cache.h src/analysis.h)
+add_executable(BPtree ${SOURCE} src/cache.h src/analysis.h include/file_alternative.h)
